methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:24: error: not found: value RED
  ligne1 (RED, BLUE);
          ^PatternPicture:24: error: not found: value BLUE
  ligne1 (RED, BLUE);
               ^